--- a/views/live.ejs
+++ b/views/live.ejs
@@ -13,7 +13,7 @@
 		<%- css %>
 	</style>
 
-	<!-- This shouldn't be hardlinked since its based on the user selection of libraries. Fix this shit. -->
+	<!-- This shouldn't be hardlinked since its based on the user selection of libraries. Fix this. -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="/js/socketioClient.js"></script>
