--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
 	<meta name="author" content="Mudit Ameta" />
 	<meta name="robots" content="index,follow" />
 	<link rel="stylesheet" href="/css/reset.css" />
+	<link rel="stylesheet" href="/css/common.css" />
 	<link rel="stylesheet" href="/css/chaicode.css" />
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script src="/js/chaicode.js"></script>
