--- a/views/chaisList.ejs
+++ b/views/chaisList.ejs
@@ -15,7 +15,7 @@
 	<script src="/js/util.js"></script>
 </head>
 <body>
-	<div class="header"></div>
+	<div class="header"><div id="new_button" class="button"><p>+ New Chai</p></div></div>
 	<div class="chais_container">
 	<% results.forEach(function(chai, index){ %>
 		<div class="chai">
