--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -20,3 +20,32 @@ a, a:visited {
 	text-decoration: none;
 	color: white;
 }
+
+div.button {
+	width: 100px;
+	background-color: #2e2e2e;
+	color: #F7F7F7;
+	padding: 5px;
+	text-align: center;
+	position: relative;
+	cursor: pointer;
+	border-radius: 2px;
+	margin: 5px 10px 5px 0;
+}
+
+div.button:hover {
+	background-color: #494949;
+}
+
+/* div.button:after {
+	position: absolute;
+	top: 0;
+	left: 0;
+	content: "";
+	width: 108px;
+	height: 24px;
+	border: 1px solid rgba(0, 0, 0, 0.15);
+	border-radius: 2px;
+	-webkit-box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.15);
+	box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.15);
+} */
