Added list chais button to index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,6 +44,10 @@
 				<label for="chaicode_none_wrap">none</label><input type="radio" name="chaicode[wrapMethod]" id="chaicode_none_wrap" checked="checked" value="none"/>
 			</div> -->
 			<div id="action_buttons" class="clear">
+
+				<div class="button left" id="list_chais">
+					<p>List Chais</p>
+				</div>
 				
 				<div class="button left" id="save">
 					<p>Save</p>
