goto now takes user to latest recipe for the chai

--- a/views/chaisList.ejs
+++ b/views/chaisList.ejs
@@ -25,7 +25,7 @@
 			<div class="js-js disappear"><%- chai.js %></div>
 			<div class="output left"><iframe src="" frameborder="0" id="<%= chai.id %>"></iframe></div>
 			<div class="actions left">
-				<a class="goto" href="<%= '/'+chai.id+'/1'%>">Goto</a>
+				<a class="goto" href="<%= '/'+chai.id+'/'+chai.revisionCount%>">Goto</a>
 				<a class="delete" href="">Delete</a>
 			</div>
 		</div>
