added apostrophe to cant

--- a/views/errors/404.ejs
+++ b/views/errors/404.ejs
@@ -9,7 +9,7 @@
 <body class="body_404">
 	<div class="error_container">
 		<div class="error_code"><p>Oh noes a <span>404!</span> :(</p></div>
-		<div class="error_text">chaicode: We cant find teh paeg u r lookin 4.</div>
+		<div class="error_text">chaicode: We can&apos;t find teh paeg u r lookin 4.</div>
 		<div class="back_button" id="back">Go back!</div>
 	</div>
 	<script type="text/javascript">
