--- a/public/stylesheets/chaicode.css
+++ b/public/stylesheets/chaicode.css
@@ -41,8 +41,11 @@ a {
 }
 
 #action_buttons {
+/*
 	width: 98% !important;
-	margin: 0 auto !important;
+	margin: 0 auto;
 	overflow: hidden;
+*/
+	margin-left: 1%;
 }
 
