--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,38 +33,28 @@
 			*************************************
 			-->
 			<div id="action_buttons">
-<!--
-				<div class="button left" id="new_chai">
+
+				<div class="button btn-left left" id="new_chai">
 					<a href="">New</a>
 				</div>
-				<div class="button left" id="save">
-					<p>Save</p>
+				<div class="button btn-middle left" id="save">Save</div>
+				<div class="button btn-middle left" id="fork">Fork</div>
+				<div class="button btn-middle left" id="list_chais">List chais</div>
+				<div class="button btn-middle left" id="export">Export</div>
+				<div class="button btn-right left" id="live_scrn">Live</div>
+				
+				<div class="code-status right">
+					<p>Saved</p>
 				</div>
-				<div class="button left" id="fork">
-					<p>Fork</p>
-				</div>
-				<div class="button left" id="list_chais">
-					<p>List Chais</p>
-				</div>
-				<div class="button left" id="export">
-					<p>Export</p>
-				</div>
-				<div class="button left" id="live_scrn">
-					<p>Live</p>
-				</div>
--->
-				<button class="button btn-left left" id="new_chai">New</button>
-				<button class="button btn-middle left" id="fork">Fork</button>
-				<button class="button btn-middle left" id="save">Save</button>
-				<button class="button btn-middle left" id="list_chais">List chais</button>
-				<button class="button btn-middle left" id="export">Export</button>
-				<button class="button btn-right left" id="live_scrn">Live</button>
 				
 				<div class="clear"></div>
 				
 				<!-- <div class="button left" id="collab">
 					<p>Collab</p>
 				</div> -->
+				
+				
+
 			</div>
 			<!--
 			*************************************
