--- a/public/stylesheets/chaicode-new.css
+++ b/public/stylesheets/chaicode-new.css
@@ -57,3 +57,8 @@
 	-moz-border-bottom-right-radius: 0px;
 	border-right: 0px;
 }
+
+.code-status p{
+	color: grey;
+	font-family: 'PT Sans', sans-serif;
+}
