--- a/public/javascripts/cm/lib/codemirror.css
+++ b/public/javascripts/cm/lib/codemirror.css
@@ -332,6 +332,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {
     height: 396px;
     border: 1px solid #AFAFAF;
     padding: 2px;
+    width:98%;
 }
 /* This classes controls what the matched elements look link
 when selected. */
