--- a/views/chaisList.ejs
+++ b/views/chaisList.ejs
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="/css/reset.css" />
 	<link rel="stylesheet" href="/css/common.css" />
 	<link rel="stylesheet" href="/css/chaisList.css" />
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script src="/js/chaiList.js"></script>
 	<script src="/js/util.js"></script>
 </head>
