Added zen mode prompts to ui

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,19 +70,19 @@
 		<form method="post" id="code_form">
 		<div id="chaicode_container">
 			<div class="left">
-				<p>html</p>
+				<p>html <span class="zen">(F11 = zen mode)</span></p>
 				<textarea id="chaicode_html_content" name="chaicode[html]" data-code="html" class="js-textarea-hook"><%= html %></textarea>
 			</div>
 			<div class="left">
-				<p>css</p>
+				<p>css <span class="zen">(F11 = zen mode)</span></p>
 				<textarea id="chaicode_css_content" name="chaicode[css]" data-code="css" class="js-textarea-hook"><%= css %></textarea>
 			</div>
 			<div class="left">
-				<p>javascript</p>
+				<p>javascript <span class="zen">(F11 = zen mode)</span></p>
 				<textarea id="chaicode_js_content" name="chaicode[js]" data-code="js" class="js-textarea-hook"><%= js %></textarea>
 			</div>
 			<div class="left">
-				<p>output</p>
+				<p>output <span class="zen">(F11 = zen mode)</span></p>
 				<iframe id="chaicode_output_frame"></iframe>
 			</div>
 			<!-- <div id="radio_buttons">
