--- a/public/stylesheets/chaicode.css
+++ b/public/stylesheets/chaicode.css
@@ -35,6 +35,10 @@ a {
 			height: 400px;
 		}
 
+	#chaicode_container .zen {
+		font-size: 0.7em;
+		color: #CECFC7;
+	}
 .breathe {
 	margin-right: 20px;
 	margin-bottom: 20px;
