local jshint and csslint version added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,9 +44,11 @@
 	<script src="/js/cm/addon/display/fullscreen.js"></script>
 
 	<script src="/js/cm/addon/lint/lint.js"></script>
-	<script src="https://rawgithub.com/stubbornella/csslint/master/release/csslint.js"></script>
+	<!-- <script src="https://rawgithub.com/stubbornella/csslint/master/release/csslint.js"></script> -->
+	<script src="/js/csslint.js"></script>
 	<script src="/js/cm/addon/lint/css-lint.js"></script>
-	<script src="http://ajax.aspnetcdn.com/ajax/jshint/r07/jshint.js"></script>
+	<!-- <script src="http://ajax.aspnetcdn.com/ajax/jshint/r07/jshint.js"></script> -->
+	<script src="/js/jshint.js"></script>
 	<script src="/js/cm/addon/lint/javascript-lint.js"></script>
 
 	<script src="/js/cm/mode/javascript/javascript.js"></script>
