--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,7 +84,7 @@
 				<textarea id="chaicode_js_content" name="chaicode[js]" data-code="js" class="js-textarea-hook"><%= js %></textarea>
 			</div>
 			<div class="left">
-				<p>output <span class="zen">(F11 = zen mode)</span></p>
+				<p>output</p>
 				<iframe id="chaicode_output_frame"></iframe>
 			</div>
 			<!-- <div id="radio_buttons">
